Fixed linked css and logo on login page

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -97,7 +97,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="/css/sign-in.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/sign-in.css') }}" rel="stylesheet">
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -154,7 +154,7 @@
     
 <main class="form-signin w-100 m-auto">
   <form>
-    <img class="mb-4" src="/images/Wizard_Realty_Logo.png" alt="" width="72" height="57">
+    <img class="mb-4" src="{{ url_for('static', filename='images/Wizard_Realty_Logo.png')}}" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
