--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 .form-control-dark {
   border-color: var(--bs-gray);
 }
@@ -12,4 +14,8 @@
 
 .dropdown-toggle:not(:focus) {
   outline: 0;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
 }
