--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -17,6 +17,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico' )}}">
   </head>
   <body>
     <header>
