--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,7 +10,8 @@
     <title>Wizard Realty</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}" />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -88,7 +89,7 @@
                             <p class="card-text"><strong>Seller: </strong>Din Shane Magallanes</p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
-                                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Edit</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -195,12 +196,32 @@
                   <input type="text" class="form-control" id="propertyName">
                 </div>
                 <div class="mb-3">
-                  <label for="propertyAddress" class="col-form-label">Address:</label>
+                  <label for="propertyAddress" class="col-form-label">Location Number:</label>
                   <input type="text" class="form-control" id="propertyAddress">
                 </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Street Name:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Barangay:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                </div>
                 <div class="mb-3">
-                  <label for="propertySeller" class="col-form-label">Seller:</label>
-                  <input type="text" class="form-control" id="propertySeller">
+                  <label for="propertyAddress" class="col-form-label">City:</label>
+                  <input type="text" class="form-control" id="propertyAddress">
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Province:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Postal Code:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="propertyStatus" class="col-form-label">Status:</label>
@@ -223,6 +244,68 @@
         </div>
       </div>
 
+      <!-- Edit Property Modal-->
+      <div class="modal fade" id="editPropertyModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5">Edit Property</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form action="">
+                <div class="mb-3">
+                  <label for="propertyName" class="col-form-label">Property Name:</label>
+                  <input type="text" class="form-control" id="propertyName">
+                </div>
+                <div class="mb-3">
+                  <label for="propertyAddress" class="col-form-label">Location Number:</label>
+                  <input type="text" class="form-control" id="propertyAddress">
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Street Name:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Barangay:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="propertyAddress" class="col-form-label">City:</label>
+                  <input type="text" class="form-control" id="propertyAddress">
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Province:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                  <div class="col">
+                    <label for="propertySeller" class="col-form-label">Postal Code:</label>
+                    <input type="text" class="form-control" id="propertySeller">
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="propertyStatus" class="col-form-label">Status:</label>
+                  <select class="select-form" id="" aria-label="statusSelect">
+                    <option selected>Available</option>
+                    <option value="1">Unavailable</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label for="propertyImage" class="col-form-label">Insert property image:</label>
+                  <input class="form-control" id="propertyImage" type="file">
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary">Close</button>
+                  <button type="button" class="btn btn-primary">Save</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
