--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,21 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.118.2">
-    <title>Signin Template · Bootstrap v5.3</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta
+      name="author"
+      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
+    />
+    <meta name="generator" content="Hugo 0.118.2" />
+    <title>Register</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/5.3/examples/sign-in/"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{ url_for('static', filename='images/favicon.ico') }}"
+    />
 
     <style>
       .bd-placeholder-img {
@@ -35,10 +45,11 @@
       .b-example-divider {
         width: 100%;
         height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
+        background-color: rgba(0, 0, 0, 0.1);
+        border: solid rgba(0, 0, 0, 0.15);
         border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+        box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+          inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
       }
 
       .b-example-vr {
@@ -48,7 +59,7 @@
       }
 
       .bi {
-        vertical-align: -.125em;
+        vertical-align: -0.125em;
         fill: currentColor;
       }
 
@@ -96,43 +107,164 @@
       }
     </style>
 
-    <link href="{{ url_for('static', filename='css/sign-in.css') }}" rel="stylesheet">
+    <link
+      href="{{ url_for('static', filename='css/register.css') }}"
+      rel="stylesheet"
+    />
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
-    <main class="form-signin w-100 m-auto border bg-white" style="border-radius: 15px;">
+    <main
+      class="form-signin w-100 m-auto border bg-white"
+      style="border-radius: 15px"
+    >
       <form class="">
-        <img class="mb-4" src="{{ url_for('static', filename='images/Wizard_Realty_Logo.png')}}" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Create your account</h1>
-        <div class="form-floating">
-          <input type="text" class="form-control" id="floatingInput" placeholder="John">
-          <label for="floatingInput">First Name</label>
+        <img
+          class="mb-4"
+          src="{{ url_for('static', filename='images/Wizard_Realty_Logo.png')}}"
+          alt=""
+          width="72"
+          height="57"
+        />
+        <h1 class="h3 mb-3 fw-bold">Register an account</h1>
+        <div class="row g-2">
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingInputGrid"
+                placeholder="First Name"
+              />
+              <label for="floatingInputGrid">First Name</label>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingInputGrid"
+                placeholder="Last Name"
+              />
+              <label for="floatingInputGrid">Last Name</label>
+            </div>
+          </div>
         </div>
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingInput" placeholder="">
-          <label for="floatingInput">Middle Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="floatingInput"
+            placeholder="Phone Number (+63)"
+          />
+          <label for="floatingInput">Phone Number (+63) </label>
         </div>
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingInput" placeholder="Doe">
-          <label for="floatingInput">Last Name</label>
-        </div>
-        <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <input
+            type="email"
+            class="form-control"
+            id="floatingInput"
+            placeholder="name@example.com"
+          />
           <label for="floatingInput">Email address</label>
         </div>
-        </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <input
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            placeholder="Password"
+          />
           <label for="floatingPassword">Password</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <input
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            placeholder="Password"
+          />
           <label for="floatingPassword">Confirm password</label>
         </div>
-        <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+        <div class="form-floating">
+          <input id="birthDate" class="form-control" type="date" />
+          <span id="dateSelected"></span>
+          <label for="birthDate">Date of Birth</label>
+        </div>
+        <h3 class="h5 mb-2 fw-bold">Address</h3>
+        <div class="form-floating">
+          <input
+            type="text"
+            class="form-control"
+            id="floatingInput"
+            placeholder="House/Building Number"
+          />
+          <label for="floatingInput">House/Building Number </label>
+        </div>
+        <div class="row g-2">
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingInputGrid"
+                placeholder="Street"
+              />
+              <label for="floatingInputGrid">Street</label>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingInputGrid"
+                placeholder="Barangay"
+              />
+              <label for="floatingInputGrid">Barangay</label>
+            </div>
+          </div>
+        </div>
+        <div class="row g-2">
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingInputGrid"
+                placeholder="City"
+              />
+              <label for="floatingInputGrid">City</label>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingInputGrid"
+                placeholder="Province"
+              />
+              <label for="floatingInputGrid">Province</label>
+            </div>
+          </div>
+        </div>
+        <div class="form-floating">
+          <input
+            type="text"
+            class="form-control"
+            id="floatingInputGrid"
+            placeholder="Postal Code"
+          />
+          <label for="floatingInputGrid">Postal Code</label>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">
+          Register
+        </button>
       </form>
     </main>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-    </body>
+  </body>
 </html>
 
 <!-- random ass comment-->
