--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -110,14 +110,15 @@
     <link
       href="{{ url_for('static', filename='css/register.css') }}"
       rel="stylesheet"
+
     />
   </head>
-  <body class="d-flex align-items-center py-4 bg-body-tertiary">
+  <body class="d-flex a lign-items-center py-4 bg-body-tertiary">
     <main
       class="form-signin w-100 m-auto border bg-white"
       style="border-radius: 15px"
     >
-      <form class="">
+      <form class="" method="POST">
         <img
           class="mb-4"
           src="{{ url_for('static', filename='images/Wizard_Realty_Logo.png')}}"
@@ -125,6 +126,21 @@
           width="72"
           height="57"
         />
+        {% with messages = get_flashed_messages(with_categories=true) %} {% if
+          messages %} {% for category, message in messages %} {% if category ==
+          'error' %}
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+            </button>
+          </div>
+          {% else %}
+          <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+            </button>
+          </div>
+          {% endif %} {% endfor %} {% endif %} {% endwith %}
         <h1 class="h3 mb-3 fw-bold">Register an account</h1>
         <div class="row g-2">
           <div class="col-md">
@@ -132,7 +148,8 @@
               <input
                 type="text"
                 class="form-control"
-                id="floatingInputGrid"
+                id="firstName"
+                name="firstName"
                 placeholder="First Name"
               />
               <label for="floatingInputGrid">First Name</label>
@@ -143,27 +160,42 @@
               <input
                 type="text"
                 class="form-control"
-                id="floatingInputGrid"
+                id="lastName"
+                name="lastName"
                 placeholder="Last Name"
               />
               <label for="floatingInputGrid">Last Name</label>
             </div>
           </div>
         </div>
-        <div class="form-floating">
-          <input
-            type="text"
-            class="form-control"
-            id="floatingInput"
-            placeholder="Phone Number (+63)"
-          />
-          <label for="floatingInput">Phone Number (+63) </label>
+        <div class="row g-2">
+          <div class="col-md-3">
+            <select class="form-select" aria-label="Default select example" id="gender" name="gender">
+              <option selected>Gender</option>
+              <option value="1">Male</option>
+              <option value="2">Female</option>
+              <option value="3">Others</option>
+            </select>
+          </div>
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="phoneNo"
+                name="phoneNo"
+                placeholder="Phone Number (+63)"
+              />
+              <label for="floatingInput">Phone Number (+63) </label>
+            </div>
+          </div>
         </div>
         <div class="form-floating">
           <input
             type="email"
             class="form-control"
-            id="floatingInput"
+            id="email"
+            name="email"
             placeholder="name@example.com"
           />
           <label for="floatingInput">Email address</label>
@@ -172,7 +204,8 @@
           <input
             type="password"
             class="form-control"
-            id="floatingPassword"
+            id="password"
+            name="password"
             placeholder="Password"
           />
           <label for="floatingPassword">Password</label>
@@ -181,47 +214,68 @@
           <input
             type="password"
             class="form-control"
-            id="floatingPassword"
+            id="confirmPassword"
+            name="confirmPassword"
             placeholder="Password"
           />
           <label for="floatingPassword">Confirm password</label>
         </div>
         <div class="form-floating">
-          <input id="birthDate" class="form-control" type="date" />
+          <input id="birthDate" name="birthDate" class="form-control" type="date" />
           <span id="dateSelected"></span>
           <label for="birthDate">Date of Birth</label>
         </div>
         <h3 class="h5 mb-2 fw-bold">Address</h3>
-        <div class="form-floating">
-          <input
-            type="text"
-            class="form-control"
-            id="floatingInput"
-            placeholder="House/Building Number"
-          />
-          <label for="floatingInput">House/Building Number </label>
-        </div>
         <div class="row g-2">
           <div class="col-md">
             <div class="form-floating">
               <input
                 type="text"
                 class="form-control"
-                id="floatingInputGrid"
+                id="houseNo"
+                name="houseNo"
+                placeholder="House/Building Number"
+              />
+              <label for="floatingInput">House/Building Number </label>
+            </div>
+          </div>
+          <div class="col-md-5">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="street"
+                name="street"
                 placeholder="Street"
               />
               <label for="floatingInputGrid">Street</label>
             </div>
           </div>
+        </div>
+        
+        <div class="row g-2">
           <div class="col-md">
             <div class="form-floating">
               <input
                 type="text"
                 class="form-control"
-                id="floatingInputGrid"
+                id="barangay"
+                name="barangay"
                 placeholder="Barangay"
               />
               <label for="floatingInputGrid">Barangay</label>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="city"
+                name="city"
+                placeholder="City"
+              />
+              <label for="floatingInputGrid">City</label>
             </div>
           </div>
         </div>
@@ -231,39 +285,51 @@
               <input
                 type="text"
                 class="form-control"
-                id="floatingInputGrid"
-                placeholder="City"
-              />
-              <label for="floatingInputGrid">City</label>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="form-floating">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInputGrid"
+                id="province"
+                name="province"
                 placeholder="Province"
               />
               <label for="floatingInputGrid">Province</label>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="postalCode"
+                name="postalCode"
+                placeholder="Postal Code"
+              />
+              <label for="floatingInputGrid">Postal Code</label>
+            </div>
+          </div>
         </div>
-        <div class="form-floating">
-          <input
-            type="text"
-            class="form-control"
-            id="floatingInputGrid"
-            placeholder="Postal Code"
-          />
-          <label for="floatingInputGrid">Postal Code</label>
+        <h3 class="h5 mb-2 fw-bold">Employment Details</h3>
+        <div class="row g-2">
+          <div class="col-md">
+            <div class="form-floating">
+              <input id="birthDate" name="employmentDate" class="form-control" type="date" />
+              <span id="employmentDate"></span>
+              <label for="birthDate">Date of Employment</label>
+            </div>
+          </div>
+          <div class="col-md">
+            <select class="form-select" aria-label="Default select example" id="employeeType" name="employeeType">
+              <option selected>Employment Status</option>
+              <option value="1">Junior</option>
+              <option value="2">Senior</option>
+            </select>
+          </div>
         </div>
+
         <button class="btn btn-primary w-100 py-2" type="submit">
           Register
         </button>
       </form>
     </main>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
 
