--- a/website/templates/success.html
+++ b/website/templates/success.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Success</title>
+    
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="{{ url_for('static', filename='images/favicon.ico') }}"
+  />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body class="d-flex align-items-center justify-content-center" style="min-height: 100vh;">
@@ -12,7 +18,7 @@
     >
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Registration Completed!</h4>
-        <p>You have successfully registered an employee. Please return to <a href="{{ url_for('auth.login') }}">login</a> page or exit.</p>
+        <p>You have successfully registered an employee. Please return to <a href="{{ url_for('auth.login') }}">login</a> page or <a href="{{ url_for('auth.register') }}">register</a> again.</p>
         <hr>
         <p class="mb-0">If you encounter bugs, please contact the IT Department.</p>
       </div>
