generate employee_number

--- a/website/templates/success.html
+++ b/website/templates/success.html
@@ -18,6 +18,8 @@
     >
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Registration Completed!</h4>
+        <p>This is your Employee ID and this will be used when logging in to your account.</p>
+        <p><strong>Employee ID: {{ employee_number }}</strong></p>
         <p>You have successfully registered an employee. Please return to <a href="{{ url_for('auth.login') }}">login</a> page or <a href="{{ url_for('auth.register') }}">register</a> again.</p>
         <hr>
         <p class="mb-0">If you encounter bugs, please contact the IT Department.</p>
