--- a/website/templates/success.html
+++ b/website/templates/success.html
@@ -19,10 +19,9 @@
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Registration Completed!</h4>
         <p>This is your Employee ID and this will be used when logging in to your account.</p>
-        <p><strong>Employee ID: {{ employee_number }}</strong></p>
-        <p>You have successfully registered an employee. Please return to <a href="{{ url_for('auth.login') }}">login</a> page or <a href="{{ url_for('auth.register') }}">register</a> again.</p>
+        <p><strong>Employee ID: {{ employee_id }}</strong></p>
         <hr>
-        <p class="mb-0">If you encounter bugs, please contact the IT Department.</p>
+        <p class="mb-0">You have successfully registered an employee. Please return to <a href="{{ url_for('auth.login') }}">login</a> page or <a href="{{ url_for('auth.register') }}">register</a> again.</p>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
