--- a/website/templates/success.html
+++ b/website/templates/success.html
@@ -18,7 +18,7 @@
     >
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Registration Completed!</h4>
-        <p>This is your Employee ID and this will be used when logging in to your account.</p>
+        <p>This is your Employee ID and this will be used when logging in to your account. <strong>DO NOT FORGET.</strong></p>
         <p><strong>Employee ID: {{ employee_id }}</strong></p>
         <hr>
         <p class="mb-0">You have successfully registered an employee. Please return to <a href="{{ url_for('auth.login') }}">login</a> page or <a href="{{ url_for('auth.register') }}">register</a> again.</p>
